# sam-contract-alerts

./: LICENSE  README.md  pyproject.toml  search.py  setup.py  test_search.py
.github/: dependabot.yml
.github/workflows/: sam-contract-alerts-build.yaml  sam-contract-alerts-run.yaml
client/: __init__.py  api_client.py  configuration.py  rest.py
client/api/: __init__.py  ms_api.py  sam_api.py
client/models/: __init__.py  ms_channel_dto.py  sam_contracts_dto.py
hooks/: pre-commit
